@@ -391,6 +391,9 @@ required in order to be able to debug the program with
 and to produce stack backtraces when
 the program terminates on an uncaught exception.
 .TP
+.B \-no-g
+Do not record debugging information (default).
+.TP
 .B \-i
 Cause the compiler to print all defined names (with their inferred
 types or their definitions) when compiling an implementation (.ml
